# Gen-Ai-Basics

./: main.py  pyproject.toml  rag_pipeline.py  requirements.txt
RAG_streamlit_app/: rag_pipeline.py
data/text_file/: machine_learning.txt  python_intro.txt
faiss_index/: index.faiss  index.pkl
notebook/: document.ipynb  praxc.ipynb
