[project]
name = "ytrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.24",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
]
